--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">I Am Poor</string>
+    <string name="titleString">I am Poor</string>
+    <string name="coalDesc">This is the coal image for i am poor app</string>
+    <string name="imgViewCD">Coal Image</string>
 </resources>
